# EnZIME

./: .gitignore  CHECKLIST.md  CLAUDE.md  LICENSE  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  build.ps1  build.sh  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
AnZimmermanLIB/AnZimmermanLib/: ARCHITECTURE.md  CHECKLIST.md  LICENSE  README.md  file_id.diz.haha.5jan2025.md  version.json  zimlib.go  zimlib.php  zimlib.py  zimlib.ts
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/: Cargo.toml  README.md  TUI_TODO.md  build.sh  tauri.conf.json
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/.github/workflows/: build.yml
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/android/: README.md
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/icons/: .gitkeep
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/src/: app.rs  config.rs  download.rs  main.rs  repository.rs  theme.rs  tui.rs  ui.rs
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/src-tauri/: tauri.conf.json
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/src/app/: commands.rs
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/ui/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/ui/src/: App.tsx  index.css  main.tsx  store.ts  vite-env.d.ts
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/ui/src/components/: AnnotationPanel.tsx  BrowseTab.tsx  DownloadsTab.tsx  HistoryTab.tsx  SettingsTab.tsx  StatusBar.tsx
AnZimmermanLIB/AnZimmermanLib/TOOLS/zim-downloader/ui/src/lib/: themes.ts
DOCS/ARCHITECTURE/: 01_system_context.puml  02_container_diagram.puml  03_component_diagram.puml  04_class_diagram.puml  05_seq_content_load.puml  06_seq_search.puml  07_seq_semantic_mesh.puml  08_ui_theme_system.puml  09_ui_layout.puml  2026-01-18_entitlements_refactor_ast.md  2026-01-18_entitlements_review_fixes_ast.md  ARCHITECTURE.md  UI_COMPONENTS.md  architecture_overview.mmd  data_flow.mmd  deployment_diagram.mmd  erd_models.mmd  state_diagram.mmd  ui_component_hierarchy.mmd
DOCS/CHECKLISTS/: 2026-01-18_entitlements_refactor_checklist.md  2026-01-18_entitlements_review_fixes_checklist.md
DOCS/Cascade/: 1st Session 16jan2026-User Login & Billing Management.md  2-UI Model and Flows-17jan2026-15h05.md  3-EnZIMe App Scaffolding Completion.md  (+2 more)
src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
(+88 files in other folders)
