[package]
name = "zim-downloader"
version = "0.1.0"
description = "A TUI application for browsing and downloading ZIM files from public repositories"
authors = ["ZIM Library Team"]
license = "MIT"
repository = "https://github.com/yourproject/zim-downloader"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# XML parsing for repository feeds
quick-xml = { version = "0.36", features = ["serialize"] }

# File operations
dirs = "5"
fs_extra = "1.3"

# Progress and downloads
indicatif = "0.17"
futures-util = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Human-readable sizes
humansize = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
